oidc-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oidc-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oidc-proxy
  template:
    metadata:
      labels:
        app: oidc-proxy
    spec:
      containers:
      - name: oidc-proxy
        image: evry/oidc-proxy:v1.2.0
        ports:
        - containerPort: 80
          name: http
---
apiVersion: v1
kind: Service
metadata:
  name: oidc-proxy
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: oidc-proxy
